# tinynurbs

./: .gitignore  CMakeLists.txt  conanfile.py
test_package/: CMakeLists.txt  test_package.cpp
tests/: CMakeLists.txt  test_curve.cpp  test_main.cpp  test_rational_curve.cpp  test_rational_surface.cpp  test_surface.cpp
